k8s/overlays/aws-saas/replicas-aws-saas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: raushni
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: raushni
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: raushni
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-generator
  namespace: raushni
spec:
  replicas: 2
